objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>End User Opportunities</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StcZone_Territory__c</fullName>
        <inlineHelpText>Territory for the Opportunity</inlineHelpText>
        <label>Stc Territory</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Territory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>leadSourceCampaign__c</fullName>
        <description>JIRA SSF-34: copied from Lead upon conversion to Opportunity</description>
        <label>Source Campaign</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>